:iphone: fix overflowing elements

--- a/styles/Modal.module.scss
+++ b/styles/Modal.module.scss
@@ -50,6 +50,17 @@
 
     .body {
       padding: 32px 0;
+      a {
+        color: $accent;
+      }
+
+      p > img {
+        max-width: 100%;
+      }
+
+      pre {
+        overflow: auto;
+      }
     }
   }
 }
